fix java ver